# pycon-talk-recommender

./: .env.example  .gitignore  README.md  pyproject.toml  schedule.json
infra/: .terraform.lock.hcl  cloud-init.yaml  main.tf  terraform.tfvars.example  variables.tf
scripts/: test_live.py
src/pycon_agent/: agent.py  data.py  tools.py
tests/: test_data.py  test_tools.py
